--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,14 @@ layout: default
 ---
 
 <article class="post">
+  <script type="text/x-mathjax-config">
+  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+</script>
+  <script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
   <h1>{{ page.title }}</h1>
+  <h2>{{ page.description}}</h2>
 
   <div class="entry">
     {{ content }}
